deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: PROJECT_NAME
  labels:
    app: PROJECT_NAME

spec:
  replicas: 2

  selector:
    matchLabels:
      app: PROJECT_NAME

  template:
    metadata:
      labels:
        app: PROJECT_NAME

    spec:
      containers:
        - name: PROJECT_NAME
          image: IMAGE_URI

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 20

          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
